--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: ./mvnw versions:set --file ./pom.xml -DnewVersion=${GITHUB_REF##*/}
       - name: Build and Test
-        id: buildAndTest
         run: >
           ./mvnw -B verify
           jacoco:report
@@ -41,12 +40,30 @@ jobs:
         with:
           name: artifacts
           path: target/*.jar
+      - name: Calculate Checksums
+        id: checksums
+        run: |
+          SHA256SUMS=$(shasum -a256 target/*.jar)
+          echo "sha256=${SHA256SUMS}" >> $GITHUB_OUTPUT
       - name: Create Release
-        uses: actions/create-release@v1 # NOTE: action is unmaintained and archived
         if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.CRYPTOBOT_RELEASE_TOKEN }} # release as "cryptobot"
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          prerelease: true
+          token: ${{ secrets.CRYPTOBOT_RELEASE_TOKEN }}
+          body: |-
+            ## Maven Coordinates
+            ```xml
+              <dependency>
+                <groupId>org.cryptomator</groupId>
+                <artifactId>siv-mode</artifactId>
+                <version>${{ github.ref_name }}</version>
+              </dependency>
+            ```
+
+            ## Artifact Checksums
+            ```txt
+            ${{ steps.checksums.outputs.sha256 }}
+            ```
+
+            See [README.md](../#reproducible-builds) section regarding reproducing this build.
+          generate_release_notes: true
