--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,12 +13,17 @@ jobs:
   analyse:
     name: Analyse
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]')"
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
       with:
         fetch-depth: 2
-    - uses: actions/setup-java@v4
+    - name: Set up Java
+      uses: actions/setup-java@v4
       with:
         java-version: 21
         distribution: 'zulu'
@@ -27,7 +32,16 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: java
-    - name: Build and Test
+        config: |
+        queries:
+          - uses: security-and-quality
+        paths:
+          - src
+        paths-ignore: 
+          - src/test/go
+    - name: Build
       run: ./mvnw -B install -DskipTests
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:java"
